--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,12 @@
   }
 }
 
+/* This adds normal styles to the utility classes with */
 @layer utilities {
-  .filter-none {
-    filter: none;
+  .no-filter {
+    text-align: left;
   }
   .filter-grayscale {
-    filter: grayscale(100%);
+    background-color: red;
   }
 }
